--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -182,8 +182,6 @@ html {
 
     width: 100%;
 
-
-
     @media (min-width: 800px) {
 
       -webkit-flex-direction: row; /* works with row or column */
@@ -575,14 +573,45 @@ html {
     align-items: center;
     width: 100%;
     text-align: left;
+    @media(min-width: 800px) {
+      flex-direction: row;
+      max-width: 800px;
+      align-items: flex-start;
+    }
+
     div {
       max-width: 80%;
       min-width: 80%;
+      @media(min-width: 800px) {
+        max-width: 350px;
+        min-width: 350px;
+      }
       input[type=text],
       textarea {
         width: 100%;
         margin-top: 5px;
         margin-bottom: 5px;
+        @media(min-width: 800px) {
+          max-width: 350px;
+        }
+      }
+
+      #contacto-enviar-mobile{
+        @media (min-width: 800px){
+          height: 0px;
+          width: 0px;
+          visibility: collapse;
+          display: none;
+        }
+      }
+
+      #contacto-enviar-desktop{
+        @media (max-width: 800px){
+          height: 0px;
+          width: 0px;
+          visibility: collapse;
+          display: none;
+        }
       }
 
     }
@@ -591,14 +620,14 @@ html {
 
 }
 
-#footer{
+#footer {
   margin: 10px;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  div{
+  div {
     margin: 5px;
   }
 }
