--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -706,19 +706,19 @@ html {
   font-family: 'Lato Heavy';
   font-style: normal;
   font-weight: normal;
-  src: local('Lato-Heavy'), url('Lato-Heavy.ttf') format('ttf');
+  src: local('Lato Heavy'), url('Lato-Heavy.ttf') format('woff');
 }
 
 @font-face {
   font-family: 'Lato Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Lato- Light'), url('Lato-Light.ttf') format('ttf');
+  src: local('Lato Light'), url('Lato-Light.ttf') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Montserrat-Light'), url('Montserrar-Light.ttf') format('ttf');
+  src: local('Montserrat Light'), url('Montserrar-Light.otf') format('woff');
 }
