--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -25,6 +25,10 @@ html {
   box-sizing: inherit;
 }
 
+*:focus{
+  outline: 0;
+}
+
 .header {
   width: 100%;
   height: 50px;
@@ -699,7 +703,7 @@ html {
         min-width: 350px;
       }
       input[type=text],
-      textarea {
+      textarea{
         width: 90%;
         right: 5px;
         margin-top: 5px;
@@ -818,13 +822,15 @@ html {
 
   }
 
-  input {
+  input,
+  select {
 
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     border: 1px solid #17384B;
     max-width: 360px;
+    background-color: rgba(0,0,0,0);
   }
 
 }
