--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -207,12 +207,13 @@ html {
     color: #ffffff;
     //padding-top: 200px;
     text-align: center;
+
     #slide-01,
     #slide-02,
     #slide-03,
     #slide-04
     {
-      //position: absolute;
+      position: absolute;
       //top: 100px;
       display: flex;
       justify-content: center;
@@ -220,7 +221,13 @@ html {
       flex-direction: column;
       width: 100%;
       height: 100%;
+      min-height: 600px;
       opacity: 0;
+      -webkit-transition: all 0.4s ;
+      -moz-transition: all 0.4s ;
+      -ms-transition: all 0.4s ;
+      -o-transition: all 0.4s ;
+      transition: all 0.4s ;
     }
 
     #slide-01{
@@ -233,24 +240,24 @@ html {
       background: black url(../img/img-03.jpg) 50% 50% no-repeat;
     }
     #slide-04{
-      background: black url(../img/img-01.jpg) 50% 50% no-repeat;
+      background: black url(../img/img-04.jpg) 50% 50% no-repeat;
     }
 
-    .slide-shown.ng-add{
-      -webkit-animation: show-slide .4s;
-      -o-animation: show-slide .4s;
-      animation: show-slide .4s;
-    }
+    //.slide-shown .ng-add{
+    //  -webkit-animation: show-slide .4s;
+    //  -o-animation: show-slide .4s;
+    //  animation: show-slide .4s;
+    //}
 
     .slide-shown{
       opacity: 1 !important;
     }
 
-    .slide-shown.ng-remove{
-      -webkit-animation: hide-slide .4s;
-      -o-animation: hide-slide .4s;
-      animation: hide-slide .4s;
-    }
+    //.slide-shown .ng-remove{
+    //  -webkit-animation: hide-slide .4s;
+    //  -o-animation: hide-slide .4s;
+    //  animation: hide-slide .4s;
+    //}
 
     @keyframes show-slide {
       0%{
