--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -112,9 +112,12 @@ html {
   min-height: 100%;
   max-width: 1200px;
   min-width: 600px;
-  width: 800px;
+  width: 820px;
   #menu-desktop-logo {
     flex: 2;
+    min-width: 100px;
+    max-width: 100px;
+    padding-left: -15px;
 
   }
 
@@ -134,7 +137,9 @@ html {
       justify-content: flex-end;
       align-items: flex-end;
       flex: 1;
-      max-height: 50px;
+      max-height: 35px;
+      margin-left: 10px;
+      padding: 5px;
 
       div {
         cursor: pointer;
@@ -196,14 +201,17 @@ html {
 }
 
 #slider {
+  position: absolute;
   top: 0;
   width: 100%;
-  height: 640px;
-  background-color: #000000;
+  height: 600px;
+  z-index: 0;
+  background-color: black;
+
   #slider-main {
     //    margin-top: 200px;
     width: 100%;
-    height: 600px;
+    height: 100%;
     font-size: 25px;
     color: #ffffff;
     //padding-top: 200px;
@@ -328,7 +336,7 @@ html {
 }
 
 #servicios {
-
+  margin-top: 600px;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
