--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -48,6 +48,20 @@ html {
 
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
 .nav-button {
   flex: 1;
 
@@ -772,15 +786,15 @@ html {
   }
 
   #empresas-carrousel {
-    height: 320px;
+    height: 190px;
     background-color: white;
     width: 100%;
     max-width: 100%;
     overflow: auto;
 
     @media (min-width: 800px) {
-      width: 800px;
-      max-width: 800px;
+      width: 900px;
+      max-width: 1000px;
     }
 
     #empresas-list {
@@ -791,10 +805,10 @@ html {
       width: 1600px;
       max-width: 1600px;
       .empresa {
-        height: 150px;
+        height: 60px;
         width: 150px;
         background-color: lightgray;
-        margin: 5px;
+        margin: 10px;
       }
     }
   }
