--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -221,6 +221,7 @@ html {
   height: 600px;
   z-index: 0;
   background-color: black;
+  overflow: hidden;
 
   #slider-main {
     //    margin-top: 200px;
