--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -517,11 +517,11 @@ html {
   min-width: 150px;
   width: 150px;
   height: 150px;
-  background-color: #b3d4fc;
+  //background-color: #b3d4fc;
   margin: 5px;
-  -webkit-box-shadow: 5px 5px 5px darkgrey;
-  -moz-box-shadow: 5px 5px 5px darkgrey;
-  box-shadow: 5px 5px 5px darkgrey;
+  //-webkit-box-shadow: 5px 5px 5px darkgrey;
+  //-moz-box-shadow: 5px 5px 5px darkgrey;
+  //box-shadow: 5px 5px 5px darkgrey;
 }
 @media (min-width: 800px) {
   /* line 450, ../sass/screen.scss */
