--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -37,6 +37,11 @@ html {
   position: fixed;
   top: 0;
   z-index: 1000;
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  -o-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
   @media (min-width: 600px) {
     display: flex;
     justify-content: center;
@@ -221,6 +226,7 @@ html {
   height: 600px;
   z-index: 0;
   background-color: black;
+  overflow: hidden;
 
   #slider-main {
     //    margin-top: 200px;
@@ -915,17 +921,31 @@ html {
   }
 }
 
-.administracion-title,
-#administracion-form,
-.administracion-separator{
+#administracion-main{
+  display: flex;
+  flex-direction: column;
   max-width: 800px;
 }
 
-#administracion-form{
+.administracion-title,
+#administracion-form,
+.administracion-separator,
+.nuevo-usuario-title,
+#nuevo-usuario-form,
+.nuevo-usuario-separator
+{
+  max-width: 800px;
+}
+
+#administracion-form,
+#nuevo-usuario-form
+{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  .administracion-inputs{
+  .administracion-inputs,
+  .nuevo-usuario-inputs
+  {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -944,7 +964,9 @@ html {
 }
 
 
-.administracion-title {
+.administracion-title,
+.nuevo-usuario-title,
+{
   width: 100%;
   font-size: 83px;
   font-family: "Montserrat Regular", sans-serif;
@@ -957,7 +979,9 @@ html {
   }
 }
 
-.administracion-input {
+.administracion-input ,
+.nuevo-usuario-input
+{
   display: flex;
   flex-direction: column;
   span {
@@ -977,7 +1001,9 @@ html {
 
 }
 
-.administracion-button-bar {
+.administracion-button-bar,
+.nuevo-usuario-button-bar,
+{
   display: flex;
   flex-direction: row;
 
@@ -990,7 +1016,8 @@ html {
   }
 }
 
-.administracion-separator {
+.administracion-separator
+{
   width: 100%;
   height: 2px !important;
   min-height: 2px;
