--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -536,7 +536,7 @@ html {
 
 #noticias {
 
-  background-color: #17384B;
+  background-color: white;
   display: flex;
   flex-direction: column;
   //  justify-content: center;
