--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -599,7 +599,7 @@ html {
 
 /* line 537, ../sass/screen.scss */
 #noticias {
-  background-color: #17384B;
+  background-color: white;
   display: flex;
   flex-direction: column;
 }
